--- a/askdjango/blog/templates/blog/post_list.html
+++ b/askdjango/blog/templates/blog/post_list.html
@@ -1,3 +1,13 @@
+<!
+<html>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport"
+          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>AskDjango's Blog</title>
+</head>
+<body>
 <h1>AskDjango</h1>
 <p>
 안녕하세요 여러분의 ~~
@@ -6,3 +16,6 @@
 <li>http://localhost:8000/blog 주소로 접속해보세요</li>
 <li>template 경로를 다르게 쓰는이유</li>
 </ul>
+</body>
+</html>
+
