--- a/askdjango/blog/templates/blog/post_list.html
+++ b/askdjango/blog/templates/blog/post_list.html
@@ -12,6 +12,14 @@
 <p>
 안녕하세요 여러분의 ~~
 </p>
+{% for post in post_list %}
+<li>
+    {{post.id}}
+    {{post.title}}
+    <small>by {{post.author}}</small>
+    <small>at {{post.updated_at}}</small>
+</li>
+{% endfor %}
 <ul>
 <li>http://localhost:8000/blog 주소로 접속해보세요</li>
 <li>template 경로를 다르게 쓰는이유</li>
