--- a/askdjango/blog/templates/blog/post_list.html
+++ b/askdjango/blog/templates/blog/post_list.html
@@ -22,7 +22,10 @@
 
 <li>
     {{post.id}}
-    {{post.title}}
+    <a href="/blog/{{post.id}}/">
+        {{post.title}}
+    </a>
+
     <small>by {{post.author}}</small>
     <small>at {{post.updated_at}}</small>1958080
 </li>
