url 리버스 기능을 이용한 유연한 url 계산

--- a/askdjango/blog/templates/blog/layout.html
+++ b/askdjango/blog/templates/blog/layout.html
@@ -1,18 +1,6 @@
-<!doctype html>
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>{%block title %}AskDjango's Blog{% endblock %}</title>
-</head>
-<body>
+{% extends "layout.html" %}
 
-<h1>AskDjango</h1>
+<!-- askdjango 폴더의 layout.html을 지칭함 -->
 
-{% block content %}
-{% endblock %}
+{% block title %} AskDjango's Blog{% endblock %}
 
-</body>
-</html>
