각각의 app마다 namespace 적용

--- a/askdjango/blog/templates/blog/post_detail.html
+++ b/askdjango/blog/templates/blog/post_detail.html
@@ -15,5 +15,6 @@
 </ul>
 {% endfor %}
 <hr/>
-<a href="{% url "post_list" %}">글 목록</a>
+<a href="{% url "blog:post_list" %}">글 목록</a>
+
 {% endblock %}
