get_absolute_url 을 이용한 코드 간편화

--- a/askdjango/blog/templates/blog/post_list.html
+++ b/askdjango/blog/templates/blog/post_list.html
@@ -12,6 +12,8 @@
 <!-- 여기서 데이터베이스 SQL 언어 발생-->
 <li>
     {{post.id}}
+    <!--<a href="{ resolve_url(post) }">{{post.title}}</a>-->
+    <!--일단 보류 템플렛에서 이 코드를 어떻게 구현할것인가에 대해  -->
     <a href="{% url "blog:post_detail" post.id %}"> {{ post.title }}</a>
     <!--웹페이지 상에서 동작을 했다가 안했다가함 그이유는 ?
     아무튼간에 위와같이 표현할수가 있다 이것이 중요 urls.py를 수정하여도 유연하게 장고에서 url 계산을 해준다 책에서는 이를 아름다운 url이라고 표현하더라-->
