blog.views.post_new/post_edit 뷰를 구현

--- a/askdjango/blog/templates/blog/post_list.html
+++ b/askdjango/blog/templates/blog/post_list.html
@@ -19,6 +19,7 @@ AskDjango 페이스북 그룹 &raquo;
 <li>template 경로를 다르게 쓰는이유</li>
 </ul>
             </div>
+        <a href="{% url "blog:post_new" %}" class = "btn btn-primary pull-right">New Post</a>
         <p>
         <form action="" method ="get">
     <input type="text" name="q" value = "{{q}}"/>
